(lang dune 3.16)

(name fragments)

(generate_opam_files true)

(source
 (github regularpoe/fragments))

(authors "regularpoe")

(maintainers "regularpoe")

(license GPL-3.0)

(documentation https://githib.com/regularpoe/fragments)

(package
 (name fragments)
 (synopsis "Transform input via pattern(s)")
 (description "Transform input via pattern(s)")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
